fix: icons and ui alignments

--- a/src/pages/dashboard/load-bot-preview/index.scss
+++ b/src/pages/dashboard/load-bot-preview/index.scss
@@ -483,7 +483,7 @@
                 padding: 0;
             }
 
-            .dc-icon {
+            svg {
                 margin-inline-end: 0.8rem;
             }
         }
@@ -537,7 +537,7 @@
                 height: 4rem;
                 padding: 0.8rem 1.1rem;
 
-                .dc-icon {
+                svg {
                     margin-inline-end: 0.8rem;
                 }
             }
